# PicoSDR

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  build.bat  main.cpp  prebuild.bat
scripts/: EnumerateUSBLog.txt  readme.txt  vendor_read.py
testbed/: CMakeLists.txt
testbed/app/: CMakeLists.txt  demo.cpp  demo_draw_analysis.cpp  demo_draw_midi.cpp  draw_analysis.cpp  draw_midi.cpp  draw_waterfall.cpp  main.cpp  radio.cpp  radio.h  radio_settings.cpp  radio_settings.h  testbed.cpp  testbed.h  waterfall.cpp  waterfall.h
testbed/cmake/: config_testbed_app.h.cmake
testbed/include/zing/: pch.h
testbed/include/zing/audio/: audio.h  audio_analysis_settings.h
testbed/run_tree/settings/: settings.toml
testbed/src/: CMakeLists.txt
testbed/src/audio/: audio.cpp  audio_analysis.cpp  j.cpp
utils/include/mled/: mled.h
utils/include/musb/: tusb_config.h
utils/mled/: mled.cpp
utils/musb/: musb.cpp  usb_descriptors.cpp
